--- a/home.html
+++ b/home.html
@@ -6,20 +6,56 @@
       sizes="16x16  32x32 64x64"
       href="http://nomadcoders.co/m.png"
     />
+    <link href="styles.css" rel="stylesheet"/>
     <title>Home - My first website</title>
+    <style>
+      /* inline에는 높이와 너비가 없다 (span , a , img )
+          block에는 높이와 너비가 있다
+      */
+      *{
+        border: 2px dashed black;
+      }
+      html{
+        background-color: tomato;
+      }
+      body{
+        margin: 20px;
+        padding: 20px;
+        background-color: thistle;
+      }
+      div{
+        padding: 20px;
+      }
+      span{
+        border-style: dotted;
+      }
+      #first{
+        background-color: whitesmoke;
+        width:150px;
+        height: 150px;
+      }
+      #second{
+        background-color: teal;
+        width:100px;
+        height: 100px;
+      }
+      #third{
+        background-color: wheat;
+        width:50px;
+        height:50px;
+      }
+
+    </style>
     <meta name="description" content="This is my website" />
     <meta charset="utf-8" />
   </head>
   <body>
-    <form>
-      <header>
-        <h1>The Haemmo Times</h1>
-      </header>
-      <main>
-        <address>123 Road Altavista</address>
-      </main>
-      <footer>
-        &copy; 2021 N.C
-      </footer>
+    <div id="first">
+      <div id="second">
+        <div id="third">
+          <span>hello</span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
