--- a/home.html
+++ b/home.html
@@ -5,28 +5,31 @@
     <title>Home - My first website</title>
     <style>
       body{
-        margin:20px;
+        height: 100vh;
+        margin: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;  /*주축은 수직이 되고 교차축은 수평이 된다. 기본에서 뒤바뀌게 됨!*/
       }
-      .btn{
-        padding: 5px 10px;
-        border-radius: 5px;
-      }
-      .teal{
+      div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        font-size: 28px;
+        color: white;
+        height: 300px;
         background-color: teal;
       }
-     .tomato{
-        background-color: tomato;
-        color: white;
+      #second{
+        background-color: antiquewhite;
       }
     </style>
   </head>
   <body>
-    <span class="btn teal">Hello!</span>
-    <span class="btn tomato">Hello!</span>
-    <span class="btn teal">Hello!</span>
-    <span class="btn tomato">Hello!</span>
-    <span class="btn teal">Hello!</span>
-    <span class="btn tomato">Hello!</span>
-    <span class="btn teal">Hello!</span>
+    <div>1</div>
+    <div id="second">2</div>
+    <div>3</div>
   </body>
 </html>
