--- a/home.html
+++ b/home.html
@@ -11,10 +11,12 @@
         padding: 3px 5px;
         border-radius: 5px;
         font-size: 55px;
-        transition: all 1s ease-in-out;
+        transition: color 1s ease-in-out,
+        border-radius 5s ease-out,
+        background-color 3s linear ;
       }
       a:hover{
-        border-radius: 20px;
+        border-radius: 30px;
         color: tomato;
         background-color: wheat;
       }
