--- a/home.html
+++ b/home.html
@@ -4,13 +4,34 @@
     <link href="styles.css" rel="stylesheet"/>
     <title>Home - My first website</title>
     <style>
+      body{
+        display: flex;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+      }
+      @keyframes superSexyCoinFilp{
+        0%{
+          transform: rotateY(0);
+        }
+        25%{
+          transform: scale(2);
+        }
+        50%{
+          transform:rotateY(180deg) translateY(100px);
+        }
+        75%{
+          transform: scale(5);
+        }
+        100%{
+          transform: rotateY(0);
+        }
+      }
       img{
         border: 5px solid black;
         border-radius: 50%;
-        transition: transform 2s ease-in-out;
-      }
-      img:hover{
-        transform: rotateX(360deg) scale(0.5);
+        width: 900px;
+        animation: superSexyCoinFilp 5s ease-in-out infinite;
       }
     </style>
   </head>
