--- a/home.html
+++ b/home.html
@@ -9,33 +9,31 @@
         height: 100vh;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
       }
-      @keyframes superSexyCoinFilp{
-        0%{
-          transform: rotateY(0);
-        }
-        25%{
-          transform: scale(2);
-        }
-        50%{
-          transform:rotateY(180deg) translateY(100px);
-        }
-        75%{
-          transform: scale(5);
-        }
-        100%{
-          transform: rotateY(0);
+      div{
+        background-color: teal;
+        width: 200px;
+        height: 200px;
+      }
+
+      @media screen and (min-width: 601px) and (max-width: 1200px) and (orientation: portrait) {
+        div{
+          background-color: wheat;
         }
       }
-      img{
-        border: 5px solid black;
-        border-radius: 50%;
-        width: 900px;
-        animation: superSexyCoinFilp 5s ease-in-out infinite;
+      span{
+        font-size: 36px;
+      }
+      @media screen and (orientation: landscape){
+        span{
+          display: none;
+        }
       }
     </style>
   </head>
   <body>
-    <img  src="img/도시.jpeg">
+    <div></div>
+    <span>Please filp your phone :(</span>
   </body>
 </html>
