--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </p>
         </header>
 
-        <form id="login-form">
-            <input type="text" placeholder="Email or phone number"/>
-            <input type="password" placeholder="Password"/>
+        <form action="friends.html" method="get" id="login-form">
+            <input name="username" type="text" placeholder="Email or phone number"/>
+            <input name="paeeword" type="password" placeholder="Password"/>
             <input type="submit" value="Log In"/>
             <a href="#">Find Cocoa Account ot Password</a>
         </form>
