--- a/friends.html
+++ b/friends.html
@@ -23,6 +23,34 @@
         </div>
     </div>
         
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
+
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>Friend's Names Display
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <div class="user-component">
+        <div class="user-component__column">
+            <img 
+                src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg" 
+                class="user-component__avatar"
+            />
+            <div class="user-component__text">
+                <h4 class="user-component__title">Heammo</h4>
+                <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+        <div class="user-component__column"></div>
+    </div>
+ 
+ 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
