--- a/find.html
+++ b/find.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="https://avatars3.githubusercontent.com/u/3612017"/>
+                        <img src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg"/>
                         <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
                     </div>
                 </div>
