--- a/chats.html
+++ b/chats.html
@@ -34,25 +34,27 @@
     </header>
 
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img 
-                    src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg" 
-                    class="user-component__avatar user-component__avatar" 
-                />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Heammo</h4>
-                    <h6 class="user-component__subtitle">
-                        Please check My Cocoa Account Info
-                    </h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img 
+                        src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg" 
+                        class="user-component__avatar user-component__avatar" 
+                    />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Heammo</h4>
+                        <h6 class="user-component__subtitle">
+                            Please check My Cocoa Account Info
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
+                    
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-                
-            </div>
-        </div>
+        </a>
     </main>
  
     <nav class="nav">
