Chat screen Talk

--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Cocoa Clone</title>
+    <title>Chats - Cocoa Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -38,11 +38,11 @@
             <div class="user-component">
                 <div class="user-component__column">
                     <img 
-                        src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg" 
+                        src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/resources/derivatives/0/08F97633-79A2-4554-9382-587266FF7179_1_105_c.jpeg" 
                         class="user-component__avatar user-component__avatar" 
                     />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Heammo</h4>
+                        <h4 class="user-component__title">Luna</h4>
                         <h6 class="user-component__subtitle">
                             Please check My Cocoa Account Info
                         </h6>
