--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">Heammo</h1>
+            <h1 class="alt-header__title">Luna</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
@@ -45,9 +45,9 @@
         </div>
 
         <div class="message-row">
-            <img src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg">
+            <img src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/resources/derivatives/0/08F97633-79A2-4554-9382-587266FF7179_1_105_c.jpeg">
             <div class="message-row__content">
-                <span class="message__author">Heammo</span>
+                <span class="message__author">Luna</span>
                 <div class ="message__info">
                     <span class="message__bubble">Hi!</span>
                     <span class="message__time">21:27</span>
