--- a/chat.html
+++ b/chat.html
@@ -63,7 +63,21 @@
                 </div>
             </div>
         </div>
+        <!-- 메세지 추가는 여기서부터 -->
     </main>
+
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message..."/>
+            <i class="far fa-smile-wink"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </form>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
