No mobile mdedia

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <input type="submit" value="Log In"/>
             <a href="#">Find Cocoa Account ot Password</a>
         </form>
+
+        <div id="no-mobile">
+            <span>Your secreen is too big! ㅠㅠ </span>
+        </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
