--- a/friends.html
+++ b/friends.html
@@ -107,6 +107,11 @@
         <div id="splach-screen">
             <i class="fas fa-comment"></i>
         </div>
+
+        <div id="no-mobile">
+            <span>Your secreen is too big! ㅠㅠ </span>
+        </div>
+        
         <script
         src="https://kit.fontawesome.com/6478f529f2.js"
         crossorigin="anonymous"
