add chats , change img

--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,7 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>100%</span>
             <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
@@ -45,12 +45,45 @@
         </div>
 
         <div class="message-row">
-            <img src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/resources/derivatives/0/08F97633-79A2-4554-9382-587266FF7179_1_105_c.jpeg">
+            <img src="css/img/luna.jpeg">
             <div class="message-row__content">
                 <span class="message__author">Luna</span>
                 <div class ="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble">Hey sis! </span>
+                    <span class="message__time">18:00</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <img src="css/img/luna.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">Luna</span>
+                <div class ="message__info">
+                    <span class="message__bubble">what r you doing?</span>
+                    <span class="message__time">18:10</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <img src="css/img/luna.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">Luna</span>
+                <div class ="message__info">
+                    <span class="message__bubble">busy?</span>
+                    <span class="message__time">18:14</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <img src="css/img/luna.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">Luna</span>
+                <div class ="message__info">
+                    <span class="message__bubble">I'm very hungry......ㅠㅜ</span>
+                    <span class="message__time">18:30</span>
                 </div>
             </div>
         </div>
@@ -58,7 +91,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
                 <div class ="message__info">
-                    <span class="message__bubble">Hi nice to meet you!</span>
+                    <span class="message__bubble">Oh.... you too</span>
                     <span class="message__time">21:27</span>
                 </div>
             </div>
