--- a/more.html
+++ b/more.html
@@ -17,7 +17,7 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>100%</span>
             <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
@@ -28,7 +28,7 @@
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
-            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
+            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i><span class="header-red-dot">.</span></a></span>
         </div>
     </header>
 
@@ -36,7 +36,7 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img 
-                    src="file:///Users/haemosoo/Pictures/Photos%20Library.photoslibrary/originals/E/E2566950-A475-4EF0-9081-EDAB9D4367F1.jpeg" 
+                    src="css/img/me.JPG" 
                     class="user-component__avatar user-component__avatar--xl" 
                 />
                 <div class="user-component__text">
@@ -94,7 +94,7 @@
             </li>
             <li class="nav__btn"> 
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
+                    <span class="nav__notification badge">9</span>
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
