add img , find modify

--- a/find.html
+++ b/find.html
@@ -83,26 +83,26 @@
                     </div>
                 </div>
             </div>
-
+            <!-- open chat 추가 -->
             <div class="open-post">
                 <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <h5 class="open-post__title">#Schna</h5>
+                    <h6 class="open-post__hashtags">#MiniatureSchnauzer#pet#black&white</h6>
                     <div class="open-post__members">
-                        <img src="css/img/album.jpg"/>
-                        <span class="open-post__member-count">802 members</span>
+                        <img src="css/img/luna2.JPG"/>
+                        <span class="open-post__member-count">234 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
                     </div>
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="css/img/album.jpg"/>
+                        <img src="css/img/luna2.JPG"/>
                         <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
                     </div>
                 </div>
             </div>
-
+            <!-- open chat 끝 -->
         </div>
     </main>
  
