--- a/friends.html
+++ b/friends.html
@@ -111,9 +111,9 @@
             <i class="fas fa-comment"></i>
         </div>
 
-        <!-- <div id="no-mobile">
+        <div id="no-mobile">
             <span>Your secreen is too big! ㅠㅠ </span>
-        </div> -->
+        </div>
         
         <script
         src="https://kit.fontawesome.com/6478f529f2.js"
