delete -> find.html(#)

--- a/find.html
+++ b/find.html
@@ -87,7 +87,7 @@
             <div class="open-post">
                 <div class="open-post__column">
                     <h5 class="open-post__title">#Schna</h5>
-                    <h6 class="open-post__hashtags">#MiniatureSchnauzer#pet#black&white</h6>
+                    <h6 class="open-post__hashtags">#MiniatureSchnauzer#pet</h6>
                     <div class="open-post__members">
                         <img src="css/img/luna2.JPG"/>
                         <span class="open-post__member-count">234 members</span>
