setting list add

--- a/settings.html
+++ b/settings.html
@@ -63,6 +63,81 @@
             </li>
         </ul>
     </main>
+    <main class="main-screen_secound">
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-lock"></i>
+                    <span>Privacy</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-bell"></i>
+                    <span>Notification</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-user"></i>
+                    <span>Friends</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-comment"></i>
+                    <span>Chats</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-id-badge"></i>
+                    <span>Multi-Profile</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-lightbulb"></i>
+                    <span>Display</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-brush"></i>
+                    <span>Themes</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-phone-alt"></i>
+                    <span>Call</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-ellipsis-h"></i>
+                    <span>Advanced Features</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="far fa-question-circle"></i>
+                    <span>Support</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            
+        </ul>
+    </main>
  
     <nav class="nav">
         <ul class="nav__list">
